--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
-theme: minima
 title: "functional fascinations"
 author: "Chris Rybicki"
+
+theme: minima
+
+repository: Chriscbr/blog
+
+social_links:
+ - { platform: github, user_url: "https://github.com/Chriscbr" }
+ - { platform: linkedin, user_url: "https://www.linkedin.com/in/christopher-rybicki/" }
+ - { platform: twitter, user_url: "https://twitter.com/rybickic" }
