--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ theme: minima
 
 repository: Chriscbr/blog
 
-social_links:
- - { platform: github, user_url: "https://github.com/Chriscbr" }
- - { platform: linkedin, user_url: "https://www.linkedin.com/in/christopher-rybicki/" }
- - { platform: twitter, user_url: "https://twitter.com/rybickic" }
+minima:
+  social_links:
+  - { platform: github, user_url: "https://github.com/Chriscbr" }
+  - { platform: linkedin, user_url: "https://www.linkedin.com/in/christopher-rybicki/" }
+  - { platform: twitter, user_url: "https://twitter.com/rybickic" }
